--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           fetch-depth: 0 # required for making tag detection work
 
+      - name: Create env var
+        shell: bash
+        run: |
+          echo "fooo=bar" >> $GITHUB_ENV
+
       - name: Get latest tag
         id: latest-tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
@@ -38,3 +43,14 @@ jobs:
               ref: 'refs/tags/${{ steps.next-tag.outputs.v_patch }}',
               sha: context.sha
             })
+
+  bar:
+    name: Bar
+    runs-on: ubuntu-latest
+    needs: foo
+    environment: dev
+    steps:
+      - name: Echo env var
+        shell: bash
+        run: |
+          echo ${{ env.fooo }}
