disable tag stuff

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,26 +23,26 @@ jobs:
         run: |
           echo "fooo=bar" >> $GITHUB_ENV
 
-      - name: Get latest tag
-        id: latest-tag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
+      # - name: Get latest tag
+      #   id: latest-tag
+      #   uses: WyriHaximus/github-action-get-previous-tag@v1
 
-      - name: Get next minor version
-        id: next-tag
-        uses: "WyriHaximus/github-action-next-semvers@v1"
-        with:
-          version: ${{ steps.latest-tag.outputs.tag }}
+      # - name: Get next minor version
+      #   id: next-tag
+      #   uses: "WyriHaximus/github-action-next-semvers@v1"
+      #   with:
+      #     version: ${{ steps.latest-tag.outputs.tag }}
 
-      - name: Create tag
-        uses: actions/github-script@v5
-        with:
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'refs/tags/${{ steps.next-tag.outputs.v_patch }}',
-              sha: context.sha
-            })
+      # - name: Create tag
+      #   uses: actions/github-script@v5
+      #   with:
+      #     script: |
+      #       github.rest.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: 'refs/tags/${{ steps.next-tag.outputs.v_patch }}',
+      #         sha: context.sha
+      #       })
 
   bar:
     name: Bar
